Autres modification codes communs

--- a/changer_mot_de_passe.html
+++ b/changer_mot_de_passe.html
@@ -6,6 +6,7 @@
         <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/changer_mot_de_passe.css">
+        <link rel="stylesheet" href="css/form.css">
     </head>
 
     <body>
