--- a/connexion.html
+++ b/connexion.html
@@ -43,20 +43,21 @@
         </header>
 
         <main class="main">
-            <section class="connexion_section">
+            <section class="section section_form">
                 <h2>Connexion</h2>
-                <form method="post" action="" class="connexion_form">
+                <form method="post" action="" class="form">
                     <input type="tel/email" name="tel_email" id="tel_email" placeholder="Numéro mobile ou Email" required>
                     <input type="password" name="password" id="password" placeholder="Mot de passe" required>
-                    <button type="submit" class="btn_connexion_submit">Se connecter</button>
+                    <button type="submit" class="btn_submit btn_connexion_submit">Se connecter</button>
                     
                     <a href="mot_de_passe_oublie.html" class="mot_de_passe_oublie">Mot de passe oublié</a>
                 </form>
 
-                <button class="btn_creation_compte">
-                    <a href="creation_du_compte.html" class="creation_compte">Créer un compte</a>
-                </button>
-                
+                <a href="creation_du_compte.html" class="creation_compte">
+                    <button class="btn_creation_compte">
+                        Créer un compte
+                    </button>
+                </a>
             </section>
         </main>
 
