--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
 
         <main class="main">
-            <section class="presentation_btn_reservez">
+            <section class="section">
                 <article class="presentation">
                     <h2>EasyMarket</h2>
                     <p class="slogant">Réservez vos produits<br>simplement</p>
@@ -55,17 +55,10 @@
                 </article>
 
                 <article class="info">
-                    <h3>Comment ça marche ? </h3>
+                    <h3>Comment ça marche ?</h3>
                     <ol>
                         <li>Remplissez quelques informations vous concernant</li>
-                        <li>
-                            Faites une liste des produits que vous voulez réserver et la quantité voulue
-                            <ul>
-                                <li>Farine / 1 Ekolo</li>
-                                <li>Sucre / 1 Kopos</li>
-                                <li>...</li>
-                            </ul>
-                        </li>
+                        <li>Entrez le(s) produit(s) que vous voulez réserver et la quantité voulue</li>
                         <li>Séléctionez la boutique ciblée</li>
                         <li>Cliquez sur le bouton envoyer</li>
                     </ol>
