--- a/mot_de_passe_oublie.html
+++ b/mot_de_passe_oublie.html
@@ -6,6 +6,7 @@
         <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/mot_de_passe_oublie.css">
+        <link rel="stylesheet" href="css/form.css">
     </head>
 
     <body>
