--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -42,11 +42,8 @@
         </header>
 
         <main>
-            <section class="titre">
+            <section class="section suivi_reservation">
                 <h2>Tableau de bord</h2>
-            </section>
-
-            <section class="suivi_reservation">
                 <article class="reserved_items">
                     <table>
                         <caption>Réservations du jour</caption>
@@ -84,7 +81,7 @@
                 </article>
             </section>
 
-            <section class="suivi_commission">
+            <section class="section suivi_commission">
                 <table>
                     <caption>Commissions</caption>
                     <thead>
