--- a/connexion.html
+++ b/connexion.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/connexion.css">
         <link rel="stylesheet" href="css/form.css">
+        <link rel="stylesheet" href="css/connexion.css">
     </head>
 
     <body>
@@ -58,6 +58,8 @@
                         Créer un compte
                     </button>
                 </a>
+
+                <a href="index.html" class="page_suivante">Terminer</a>
             </section>
         </main>
 
