--- a/creation_du_compte.html
+++ b/creation_du_compte.html
@@ -59,6 +59,7 @@
                     <a href="connexion.html" class="deja_inscrit">Déjà inscrit ? Connectez-vous</a>
                 </form>
                 
+                <a href="verification_num_email.html" class="page_suivante">Suivant</a> 
             </section>
         </main>
 
