--- a/index.html
+++ b/index.html
@@ -58,12 +58,35 @@
                     <h3>Comment ça marche ?</h3>
                     <ol>
                         <li>Remplissez quelques informations vous concernant</li>
-                        <li>Entrez le(s) produit(s) que vous voulez réserver et la quantité voulue</li>
+                        <li>Entrez le(s) produit(s) que vous voulez réserver et la quantité voulue ou le prix si elle est connu</li>
                         <li>Séléctionez la boutique ciblée</li>
                         <li>Cliquez sur le bouton envoyer</li>
                     </ol>
                 </article>
             </section>
+
+            <!-- <section class="section products_section">
+                <h3>Boutique/produits</h3>
+                <article class="boutique_products">
+                    <div class="boutique">
+                        <h3>Boutique une</h3>
+                        <h4>Description</h4>
+                        <div class="boutique_description">
+                            <p>Vente des produits alimentaires</p>
+                            <p>...</p>
+                        </div>
+                    </div>
+
+                    <div class="products">
+                        <h4>Produits</h4>
+                        <div class="products_list">
+                            <p>Farine</p>
+                            <p>Huile</p>
+                            <p>Sucre</p>
+                        </div>
+                    </div>
+                </article>
+            </section> -->
         </main>
 
         <footer class="footer">
