--- a/mot_de_passe_oublie.html
+++ b/mot_de_passe_oublie.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/mot_de_passe_oublie.css">
         <link rel="stylesheet" href="css/form.css">
+        <link rel="stylesheet" href="css/mot_de_passe_oublie.css">
     </head>
 
     <body>
@@ -43,15 +43,14 @@
         </header>
 
         <main class="main">
-            <section class="mot_de_passe_oublie_section">
+            <section class="section section_form mot_de_passe_oublie_section">
                 <h3>Réinitialisation du mot de passe</h3>
-                <form method="post" action="" class="mot_de_passe_oublie_form">
+                <form method="post" action="" class="form">
                     <input type="tel/email" name="tel_email" id="tel_email" placeholder="Numéro mobile ou Email" required>
-                    <input type="number" name="code_verification" id="code_verification" placeholder="Code de vérification" required>
-                    <button type="submit" class="btn_envoyer">
-                        <a href="changer_mot_de_passe.html">Envoyer</a>
-                    </button>
+                    <button type="submit" class="btn_submit btn_changer_mot_de_passe_submit">Envoyer</button>
                 </form>
+
+                <a href="changer_mot_de_passe.html" class="page_suivante">Suivant</a>                
             </section>
         </main>
 
